--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://scontent.flim4-2.fna.fbcdn.net/v/t39.30808-6/277533123_1387737298408915_6189120219329447071_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFohmhLJ33frKjI-5GrILRs0kcoJOAm7jjSRygk4CbuOMpEvcHkiy_6u21GPKrrwqkFTx0Lek_rlWALQmLfhpDc&_nc_ohc=BMkeZR7jBkEAX-3BX95&_nc_ht=scontent.flim4-2.fna&oh=00_AT_fgqbQ7a6v3XTG9-yqVSMQOoMxxEbKJLbGRoDSLiiLMw&oe=62A8F9E2" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <title>Arte y Diseño</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
