--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://scontent.flim4-2.fna.fbcdn.net/v/t39.30808-6/277533123_1387737298408915_6189120219329447071_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFohmhLJ33frKjI-5GrILRs0kcoJOAm7jjSRygk4CbuOMpEvcHkiy_6u21GPKrrwqkFTx0Lek_rlWALQmLfhpDc&_nc_ohc=BMkeZR7jBkEAX-3BX95&_nc_ht=scontent.flim4-2.fna&oh=00_AT_fgqbQ7a6v3XTG9-yqVSMQOoMxxEbKJLbGRoDSLiiLMw&oe=62A8F9E2" />
